# faces_recognition

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
emotion/: __init__.py  detector.py  translate.py  utils.py
