[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion"                
version = "0.1.0"
description = "Core de detección de emociones con DeepFace/OpenCV"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Luis González" }]
dependencies = [
  "numpy",
  "opencv-python-headless",
  "deepface",
  "pillow",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["emotion*"]
